RESOLVED FIXED128126
Deconstructed parameters aren't being placed in the correct scope
https://bugs.webkit.org/show_bug.cgi?id=128126
Summary Deconstructed parameters aren't being placed in the correct scope
Oliver Hunt
Reported 2014-02-03 14:25:40 PST
Deconstructed parameters aren't being placed in the correct scope
Attachments
Patch (11.62 KB, patch)
2014-02-03 14:29 PST, Oliver Hunt
koivisto: review+
Oliver Hunt
Comment 1 2014-02-03 14:29:15 PST
Antti Koivisto
Comment 2 2014-02-03 14:38:00 PST
Comment on attachment 223019 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=223019&action=review > Source/JavaScriptCore/bytecompiler/BytecodeGenerator.cpp:67 > + for (size_t i = 0; i < m_deconstructedParameters.size(); i++) { > + auto& entry = m_deconstructedParameters[i]; I would use range-for here and elsewhere.
Oliver Hunt
Comment 3 2014-02-03 14:39:32 PST
Note You need to log in before you can comment on or make changes to this bug.